--- a/dorm/templates/dorm/login.html
+++ b/dorm/templates/dorm/login.html
@@ -19,9 +19,15 @@
   <!-- Custom styles for this template-->
   <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
 
+  <script>
+    function ShowError(){
+        window.alert("{{ error }}");
+    }
+  </script>
+
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-gradient-primary" {% if error %}onload="ShowError()"{% endif %}>
 
   <div class="container">
 
@@ -40,6 +46,7 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                   </div>
+                  {% block form %}
                   <form class="user">
                     <div class="form-group">
                       <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
@@ -64,13 +71,16 @@
                       <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
                     </a>
                   </form>
+                  {% endblock %}
                   <hr>
+                  {% block other %}
                   <div class="text-center">
                     <a class="small" href="forgot-password.html">Forgot Password?</a>
                   </div>
                   <div class="text-center">
                     <a class="small" href="register.html">Create an Account!</a>
                   </div>
+                  {% endblock %}
                 </div>
               </div>
             </div>
