modify dormadmin_login and html

--- a/dorm/templates/dorm/index.html
+++ b/dorm/templates/dorm/index.html
@@ -252,7 +252,7 @@
                 </h6>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/fn_BT9fwg_E/60x60" alt="">
+                          <img class="rounded-circle" src="{% static 'img/index_1.jpeg' %}" alt="">
                     <div class="status-indicator bg-success"></div>
                   </div>
                   <div class="font-weight-bold">
@@ -262,7 +262,7 @@
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/AU4VPcFN4LE/60x60" alt="">
+                          <img class="rounded-circle" src="{% static 'img/index_2.jpeg' %}" alt="">
                     <div class="status-indicator"></div>
                   </div>
                   <div>
@@ -272,7 +272,7 @@
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/CS2uCrpNzJY/60x60" alt="">
+                          <img class="rounded-circle" src="{% static 'img/index_3.jpeg' %}" alt="">
                     <div class="status-indicator bg-warning"></div>
                   </div>
                   <div>
@@ -282,7 +282,7 @@
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60" alt="">
+                          <img class="rounded-circle" src="{% static 'img/index_4.jpeg' %}" alt="">
                     <div class="status-indicator bg-success"></div>
                   </div>
                   <div>
@@ -299,8 +299,8 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
-                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                      <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ workstatus }}</span>
+                      <img class="img-profile rounded-circle" src="{% static 'img/index_person.jpeg' %}">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -648,7 +648,7 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
+          <a class="btn btn-primary" href="{% url 'dormadmin:logout' %}">Logout</a>
         </div>
       </div>
     </div>
