--- a/dormadmin/templates/dormadmin/index.html
+++ b/dormadmin/templates/dormadmin/index.html
@@ -1,4 +1,5 @@
 {% extends 'dorm/index.html' %}
+{% load static %}
 {% block title %}index{% endblock %}
         {% block content %}
         <!-- Begin Page Content -->
@@ -260,7 +261,7 @@
                 </div>
                 <div class="card-body">
                   <div class="text-center">
-                    <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="img/undraw_posting_photo.svg" alt="">
+                          <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="{% static 'img/undraw_posting_photo.svg' %}" alt="">
                   </div>
                   <p>Add some quality, svg illustrations to your project courtesy of <a target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a constantly updated collection of beautiful svg images that you can use completely free and without attribution!</p>
                   <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on unDraw &rarr;</a>
