--- a/dormadmin/templates/dormadmin/index.html
+++ b/dormadmin/templates/dormadmin/index.html
@@ -3,6 +3,7 @@
 {% block title %}学生宿舍管理系统-首页{% endblock %}
 {% block dashboard_url %}{% url 'dormadmin:index' %}{% endblock %}
 {% block building_url %}{% url 'dormadmin:building' %}{% endblock %}
+{% block student_url %}{% url 'dormadmin:search' %}{% endblock %}
         {% block content %}
         <!-- Begin Page Content -->
         <div class="container-fluid">
