--- a/dormadmin/templates/dormadmin/student.html
+++ b/dormadmin/templates/dormadmin/student.html
@@ -9,7 +9,7 @@
 
 {% block dashboard_url %}{% url 'dormadmin:index' %}{% endblock %}
 {% block building_url %}{% url 'dormadmin:building' %}{% endblock %}
-
+{% block student_url %}{% url 'dormadmin:search' %}{% endblock %}
 {% block content %}
         <!-- Begin Page Content -->
         <div class="container-fluid">
